# fanjing-face-recognition

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  record_speaking_data.py  requirements-training.txt  requirements.txt  run_detection.py  run_ingestion.py  run_tracking.py  run_web_v2.py  test_bisenet_occlusion.py  test_full_mouth.py  train_speaking_model.py
.github/workflows/: ci.yml  docker-publish.yml  pypi-publish.yml
docs/: OPTIMIZATION_PLAN.md  system_logic.md  嘴部判断  录制场景说明  搜索结果  搜索结果2  搜索结果3  方案讨论  灰度判断逻辑  系统逻辑文档.md  结构性修改  遮挡判断逻辑
models/speaking/: speaking_meta.json  speaking_model.json
scripts/: convert_bisenet_to_onnx.py  download_arcface.py  download_bisenet.py  download_model.py  download_silero_vad.py
src/: cli.py
src/alignment/: __init__.py  aligner.py  quality.py  track_sampler.py
src/detectors/: __init__.py  detection.py  draw.py  scrfd_detector.py
src/embedding/: __init__.py  candidate_pool.py  embedder.py  identity_state.py  logger.py  person_registry.py  track_template.py
src/ingestion/: __init__.py  camera_source.py  frame.py  logger.py  overlay.py  video_source.py
src/speaking/: __init__.py  audio_vad.py  mesh_detector.py  mouth_analyzer.py  mouth_worker.py  speaking_analyzer.py
src/tracking/: __init__.py  bot_sort.py  draw.py  kalman_filter.py  matching.py  mouth_tracker.py  track.py
src/web/: config.py  server.py
src/web/templates/: index.html  index_v2.html
