[project]
name = "fanjing-face-recognition"
version = "0.1.0"
description = "Real-time face recognition and identity management system"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "FlowElement"},
]
keywords = ["face-recognition", "real-time", "tracking", "identity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "onnxruntime>=1.16.0",
    "flask>=3.0.0",
    "scipy>=1.11.0",
    "mediapipe>=0.10.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
training = [
    "pandas>=2.0.0",
    "keyboard>=0.13.0",
]

[project.scripts]
fanjing-face = "src.cli:main"

[project.urls]
Homepage = "https://github.com/FlowElement-ai/fanjing-face-recognition"
Repository = "https://github.com/FlowElement-ai/fanjing-face-recognition"
Documentation = "https://github.com/FlowElement-ai/fanjing-face-recognition#readme"
Issues = "https://github.com/FlowElement-ai/fanjing-face-recognition/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
